--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,3 +1,10 @@
+2017-06-27
+patch: Test procedure improvements (documentation + script).
+cha: m23admin-offline-copy: Additional SQL dumps added.
+cha: quickbuild.sh: Now creates Packages* for m23-ucs-extra in its separated directory.
+new: addLocalm23ServerRepository: Adds local test repository for m23 server packages to the test machine.
+new: addUCSTestRepository: Adds the UCS online test repository with uploaded m23 server packages to the test machine.
++++++
 2017-06-26
 patch 101003: Adjustements for UCS.
 cha: CLIENT_touchLogFile: Now uses SERVER_multiMkDir instead of mkdir.
